[tool.poetry]
name = "fcp-cheatsheet"
version = "0.1.0"
description = ""
authors = ["Oliver Steele <steele@osteele.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
beautifulsoup4 = "^4.8.2"
Jinja2 = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
